# python_web_ex12

./: .env.example  pyproject.toml
app/: auth.py  main.py  settings.py  types.py
app/migrations/: env.py
app/migrations/versions/: 35d67f8ae418_add_users.py  77ba8fa30f12_init.py
contacts/: controllers.py  models.py  routes.py  schemas.py  seeds.py
users/: controllers.py  models.py  schemas.py
